src/test/resources/examples/invalid/IncompleteFXReference.fxml
<?import javafx.scene.layout.VBox?>
<fx:root type="VBox" xmlns:fx="http://javafx.com/fxml">
    <fx:reference/>
</fx:root>
